<resources>
    <string name="app_name">CGProject</string>

    <string name="app_description">Vuforia Engine Sample Applications</string>

    <string name="version_vuforia">Vuforia Engine v</string>
    <string name="version_android">Android API level</string>

    <string name="button_start">Start</string>
    <string name="activities_list_title_string">Vuforia Engine Samples</string>
    <string name="activities_list_empty">No activities</string>

    <string name="feature_image_targets">Image Targets</string>
    <string name="feature_model_targets">Model Targets</string>
    <string name="feature_ground_plane">Ground Plane</string>
    <string name="feature_vumark">VuMark</string>
    <string name="feature_cylinder_targets">Cylinder Targets</string>
    <string name="feature_multi_targets">Multi Targets</string>
    <string name="feature_user_targets">User Defined Targets</string>
    <string name="feature_object_reco">Object Reco</string>
    <string name="feature_cloud_reco">Cloud Reco</string>
    <string name="feature_virtual_buttons">Virtual Buttons</string>

    <string name="mode_description">Ground Plane mode</string>
    <string name="mode_product_placement">Product Placement</string>
    <string name="mode_mid_air">Mid-Air</string>

    <string name="instruct_point_device">Point device towards the ground</string>
    <string name="instruct_touch_screen">Touch anywhere on screen</string>
    <string name="instruct_gestures">Use 1 finger to move\nUse 2 fingers to rotate</string>
    <string name="instruct_relocalize">Point camera to previous position to restore tracking</string>
    <string name="instruct_limited_move_device">Move to get better tracking for placing an anchor</string>
    <string name="instruct_empty"> </string>

    <string name="button_OK">OK</string>
    <string name="button_continue">Continue</string>

    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia Engine.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>

    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia Engine. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia Engine. Camera not accessible</string>
    <string name="INIT_ERROR_TRACKERS_NOT_INITIALIZED">This device may not be supported. For a list of supported devices please see https://library.vuforia.com/articles/Solution/ground-plane-supported-devices.html</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia Engine App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia Engine App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia Engine App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia Engine.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>

    <string name="content_desc_camera_button">Camera Button</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>

    <string name="menu_back">Vuforia Engine Samples</string>
    <string name="menu_device_tracker">Device Tracker</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>

    <string name="menu_datasets">DATASETS</string>
    <string name="menu_versions">VERSIONS</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_virtual_buttons">VIRTUAL BUTTONS</string>

    <string name="menu_button_red">Red</string>
    <string name="menu_button_blue">Blue</string>
    <string name="menu_button_yellow">Yellow</string>
    <string name="menu_button_green">Green</string>
    <string name="menu_next_guide_view">Next Guide View</string>

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="splash_screen_description">Vuforia Engine Splash</string>
    <string name="muro_de_ciencias">Muro de Ciencias</string>
    <string name="menu_title">Facultad de Ciencias - UCV</string>
    <string name="button_home">Button Home</string>
    <string name="inicio">Inicio</string>
    <string name="mapa">Mapa</string>
    <string name="lugares">Lugares</string>
    <string name="imagenes">Imágenes</string>
    <string name="icon_menu">Icon menu</string>
    <string name="icon_flash">Icon flash</string>
    <string name="icon_zoom_out">Icon zoom out</string>
    <string name="icon_zoom_in">Icon zoom in</string>

    <string name="location_0">Auditorio Tobías Lasser</string>
    <string name="location_0_lon">10.486627</string>
    <string name="location_0_lat">-66.894050</string>

    <string name="location_1">Banco de Venezuela</string>
    <string name="location_1_lon">10.486741</string>
    <string name="location_1_lat">-66.893771</string>

    <string name="location_2">Bibioteca Alonso Gameiro</string>
    <string name="location_2_lon">10.486614</string>
    <string name="location_2_lat">-66.893672</string>

    <string name="location_3">Decanato</string>
    <string name="location_3_lon">10.487164</string>
    <string name="location_3_lat">-66.893557</string>

    <string name="location_4">Escuela de Computación</string>
    <string name="location_4_lon">10.486588</string>
    <string name="location_4_lat">-66.894456</string>

    <string name="location_5">Plaza La Langosta</string>
    <string name="location_5_lon">10.486831</string>
    <string name="location_5_lat">-66.894890</string>

    <string name="location_6">Poliedrito</string>
    <string name="location_6_lon">10.487344</string>
    <string name="location_6_lat">-66.896437</string>

    <string name="location_7">Sala Leandro Aristiguieta</string>
    <string name="location_7_lon">10.487434</string>
    <string name="location_7_lat">-66.893658</string>

    <string name="location">Facultad de Ciencias UCV</string>
    <string name="location_lon">10.486711</string>
    <string name="location_lat">-66.894651</string>

    <string name="image_auditorio">Image auditorio</string>
    <string name="imagen_biblioteca">Imagen biblioteca</string>
    <string name="imagen_banco">Imagen Banco</string>
    <string name="imagen_decanato">Imagen decanato</string>
    <string name="imagen_escuela">Imagen escuela</string>
    <string name="imagen_plaza">Imagen plaza</string>
    <string name="imagen_poliedrito">Imagen poliedrito</string>
    <string name="imagen_sala">Imagen sala</string>
    <string name="imagen_flecha">Imagen flecha</string>
    <string name="imagen_close">Imagen close</string>
    <string name="title_activity_maps">Map</string>

</resources>
